add reply to comment

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -120,5 +120,9 @@
   },
   "themeListbox": {
     "choose": "Choose a theme"
+  },
+  "textEditor": {
+    "submit": "Submit",
+    "cancel": "Cancel"
   }
 }
