add section and aria label to flairs in posts
So they can be distinguished from a title

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -129,6 +129,7 @@
   "settings": {
     "UILanguage": "UI language preference"
   },
+  "flair": "flair",
   "commentSort": {
     "new": "new",
     "best": "best",
