--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -128,6 +128,7 @@
   "settings": {
     "UILanguage": "Idioma de la interfaz"
   },
+  "flair": "etiqueta",
   "commentSort": {
     "new": "nuevo",
     "best": "mejor",
