--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -82,7 +82,7 @@
   "logOut": "Log Out",
   "appSettings": "App Settings",
   "memberSince": "Member since",
-  "internetPoints": "Internet Points",
+  "internetPoints": "karma",
   "subscribers": "subscribers",
   "created": "Created",
   "myProfile": "My Profile",
