--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -81,7 +81,7 @@
   "logOut": "Cerrar sesión",
   "appSettings": "Ajustes",
   "memberSince": "Miembro desde",
-  "internetPoints": "Puntos de Internet",
+  "internetPoints": "karma",
   "subscribers": "suscriptores",
   "created": "Creado",
   "myProfile": "Mi perfil",
